[gd_scene load_steps=50 format=2]

[ext_resource path="res://src/game/enemies/enemy_generic.gd" type="Script" id=1]
[ext_resource path="res://src/game/hud/debug_showhide.gd" type="Script" id=3]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0002.png" type="Texture" id=4]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0003.png" type="Texture" id=5]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0001.png" type="Texture" id=6]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0008.png" type="Texture" id=7]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0004.png" type="Texture" id=8]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0005.png" type="Texture" id=9]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0009.png" type="Texture" id=10]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0007.png" type="Texture" id=11]
[ext_resource path="res://textures/labu/diem_labu/hallowen_0006.png" type="Texture" id=12]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0001.png" type="Texture" id=13]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0007.png" type="Texture" id=14]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0003.png" type="Texture" id=15]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0018.png" type="Texture" id=16]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0011.png" type="Texture" id=17]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0006.png" type="Texture" id=18]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0016.png" type="Texture" id=19]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0008.png" type="Texture" id=20]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0009.png" type="Texture" id=21]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0004.png" type="Texture" id=22]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0002.png" type="Texture" id=23]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0014.png" type="Texture" id=24]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0021.png" type="Texture" id=25]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0010.png" type="Texture" id=26]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0005.png" type="Texture" id=27]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0012.png" type="Texture" id=28]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0020.png" type="Texture" id=29]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0015.png" type="Texture" id=30]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0019.png" type="Texture" id=31]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0013.png" type="Texture" id=32]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0017.png" type="Texture" id=33]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0027.png" type="Texture" id=34]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0029.png" type="Texture" id=35]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0022.png" type="Texture" id=36]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0024.png" type="Texture" id=37]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0025.png" type="Texture" id=38]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0028.png" type="Texture" id=39]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0023.png" type="Texture" id=40]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0031.png" type="Texture" id=41]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0030.png" type="Texture" id=42]
[ext_resource path="res://textures/labu/jalan_labu/hallowen_0026.png" type="Texture" id=43]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=44]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 25.5 )

[sub_resource type="Animation" id=5]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Hallowen0001:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hallowen0001:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "revive"
tracks/0/type = "value"
tracks/0/path = NodePath("Hallowen0001:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "stun"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Hallowen0001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 1 ), Vector2( 6, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Hallowen0001:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 13 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 16 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 36 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 34 ), ExtResource( 39 ), ExtResource( 35 ), ExtResource( 42 ), ExtResource( 41 ) ]
}

[node name="GenericEnemy" type="KinematicBody2D" groups=["Enemies"]]
position = Vector2( 0.666679, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DebugPathfinding" type="Line2D" parent="."]
width = 2.0
default_color = Color( 1, 0.984314, 0, 1 )
texture_mode = -1082211219
script = ExtResource( 3 )

[node name="Stun" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/death = SubResource( 5 )
anims/idle = SubResource( 2 )
anims/revive = SubResource( 6 )
anims/stun = SubResource( 4 )
anims/walk = SubResource( 3 )

[node name="Hallowen0001" type="Sprite" parent="."]
position = Vector2( 4, 1 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 13 )

[node name="HealthBar" parent="." instance=ExtResource( 44 )]
margin_left = -16.0
margin_top = -33.0
margin_right = -16.0
margin_bottom = -33.0

[connection signal="timeout" from="Stun" to="." method="_on_Stun_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
